<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_app"
    tools:context=".AddCompraActivity">

    <TextView
        android:id="@+id/add_compra_txt_onde_comprou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_compra_txt_onde_comprou"
        android:textColor="?attr/color_text_corp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/add_compra_edit_onde_comprou"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/add_compra_edit_onde_comprou"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:inputType="text"
        android:textColor="?attr/color_text_corp"
        android:textSize="20sp"
        android:theme="@style/EditTextStyle"
        app:layout_constraintLeft_toRightOf="@id/add_compra_txt_onde_comprou"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/add_compra_txt_quanto_pagou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/add_compra_txt_quanto_pagou"
        android:textColor="?attr/color_text_corp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/add_compra_edit_quanto_pagou"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_compra_txt_onde_comprou" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cifrao"
        android:textColor="?attr/color_text_corp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/add_compra_txt_quanto_pagou"
        app:layout_constraintLeft_toLeftOf="@id/add_compra_edit_quanto_pagou" />

    <EditText
        android:id="@+id/add_compra_edit_quanto_pagou"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:inputType="numberDecimal"
        android:paddingStart="24dp"
        android:textColor="?attr/color_text_corp"
        android:textSize="20sp"
        android:theme="@style/EditTextStyle"
        app:layout_constraintLeft_toRightOf="@id/add_compra_txt_quanto_pagou"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_compra_edit_onde_comprou" />

    <TextView
        android:id="@+id/add_compra_txt_quanti_parcelas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/add_compra_txt_quanti_parcelas"
        android:textColor="?attr/color_text_corp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/add_compra_edit_quanti_parcelas"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_compra_txt_quanto_pagou" />

    <EditText
        android:id="@+id/add_compra_edit_quanti_parcelas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:inputType="number"
        android:textColor="?attr/color_text_corp"
        android:textSize="20sp"
        android:theme="@style/EditTextStyle"
        app:layout_constraintLeft_toRightOf="@id/add_compra_txt_quanti_parcelas"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_compra_edit_quanto_pagou" />

    <TextView
        android:id="@+id/add_compra_txt_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/add_compra_txt_data"
        android:textColor="?attr/color_text_corp"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_compra_txt_quanti_parcelas" />

    <androidx.cardview.widget.CardView
        android:id="@+id/add_compra_cardview_calendar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="?attr/color_blue"
        android:elevation="8dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_compra_txt_data">

        <ImageButton
            android:id="@+id/add_compra_button_calendar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_calendar" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/add_compra_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="?attr/color_text_corp"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_compra_cardview_calendar" />

    <Button
        android:id="@+id/add_compra_button_ok"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="26dp"
        android:backgroundTint="?attr/color_blue"
        android:text="@string/ok"
        android:textColor="?attr/color_text_header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_compra_data" />

</androidx.constraintlayout.widget.ConstraintLayout>