<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_app"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:layout_weight="0.5"
                android:backgroundTint="@android:color/transparent"
                android:padding="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_card_header"
                    android:gravity="center"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:text="@string/total"
                        android:textAlignment="center"
                        android:textColor="?attr/color_text_header"
                        android:textSize="16sp"
                        android:textStyle="bold|italic" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@id/total"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/cifrao"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cifrao"
                            android:textColor="?attr/color_text_header"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/valor_total"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:text="@string/total_ficticio"
                            android:textColor="?attr/color_text_header"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:layout_weight="0.5"
                android:backgroundTint="@android:color/transparent"
                android:padding="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_card_header"
                    android:gravity="center"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/gasto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:text="@string/gasto"
                        android:textAlignment="center"
                        android:textColor="?attr/color_text_header"
                        android:textSize="16sp"
                        android:textStyle="bold|italic" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@id/gasto"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/cifrao_gasto"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cifrao"
                            android:textColor="?attr/color_text_header"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/valor_gasto"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:text="@string/total_ficticio"
                            android:textColor="?attr/color_text_header"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:padding="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/recyclerview_item_page_home" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:backgroundTint="?attr/color_floatingactionbutton"
        android:src="@drawable/ic_add"
        tools:ignore="SpeakableTextPresentCheck" />

</RelativeLayout>